--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Itex Power</title>
+    <title>Power Deals</title>
   </head>
   <body style="font-family: 'Poppins', sans-serif;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
